Task#45 Invitation poll based games Removed preview features